fix: 避免Table组件当bodyWrapper叠加scrollbar时高度为100%可能计算出错误高度

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -25,6 +25,7 @@
     & &-header-wrapper,
     & &-body-wrapper{
         width: 100%;
+        height: auto;
         overflow: hidden;
         scrollbar-width: none;
         &::-webkit-scrollbar {
